tests/snapshots/examples_fixtures/type_system__failing__198_effect_row_subset_unsatisfied_e422.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `run_needs_console_clock`.

  examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx:45:29
   |
35 | fn run_needs_console_clock(f: (() -> Int with Console, Clock)) -> Int with Console, Clock {
   | ----------------------------------------------------------------------------------------- `run_needs_console_clock` expects `() -> Int with Console, Clock` as the 1st parameter
36 |     f()
37 | }
... |
43 | 
44 | fn main() with Console, Clock {
45 |     run_needs_console_clock(only_console)
   |                             ^^^^^^^^^^^^
   |                             ------------ this argument has type `() -> Int with Console`

Note:
  expected argument type: () -> Int with Console, Clock
  found argument type: () -> Int with Console
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `() -> Int with Console, Clock` value as the 1st argument.
== stdout ==
<not executed>
